# mailmerge

./: .env.example  .gitignore  README.md  app.py  config.yaml  database.md  frontend.md  pyproject.toml  requirements.txt  start.sh  update_frontend_versions.sh
backend/: scheduler.py
backend/agent_service/: README.md  __init__.py  action_router.py  agent_service.py  config.py  llm_client.py  schemas.py
backend/agent_service/create_task/: __init__.py  handler.py  prompt_generator.py  utils.py
backend/agent_service/create_template/: __init__.py  field_types.md  handler.py  (+1 more)
backend/api/: agent.py  aggregations.py  auth.py  dashboard.py  emails.py  files.py  mailbox.py  secretaries.py  settings.py  tasks.py  teachers.py  templates.py
backend/database/: create_db.py  db_config.py  models.py  reset_db.py  set_default.py
backend/email_service/: __init__.py  email_publisher.py  email_receiver.py  email_service.py
backend/helper/: __init__.py  excel_utils.py
backend/logger/: logger.py
backend/scheduler/: .last_email_fetch_ts  scheduler.py  utils.py
backend/services/: email_publisher.py  email_receiver.py  task_service.py
backend/storage_service/: __init__.py  docker-compose.yml  minio_service.py  reset_minio.py  storage.py
backend/utils/: __init__.py  encryption.py  tasks_utils.py  template_utils.py  time_utils.py
frontend/: index.html  login.html  register.html  update_versions.py
frontend/components/: header.html  sidebar.html
frontend/pages/: agent.html  aggregations.html  dashboard.html  mailbox.html  settings.html  tasks.html  templates.html
(+39 files in other folders)
